<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="com.udacity.shoestore.util.Converter" />
        <variable
            name="shoeViewModel"
            type="com.udacity.shoestore.viewmodel.ShoeViewModel" />
    </data>

    <!--all of the views are inside this ConstraintLayout-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screens.shoe.detail.ShoeDatailFragment">

        <TextView
            android:id="@+id/name_text"
            style="@style/TextViewDetailStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="24dp"
            android:text="@string/name"
            app:layout_constraintBottom_toTopOf="@+id/name_edit"
            app:layout_constraintStart_toStartOf="@+id/name_edit"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <EditText
            android:id="@+id/name_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/shoe_name"
            android:ems="10"
            android:hint="@string/shoe_name"
            android:inputType="textPersonName"
            android:text="@={shoeViewModel.shoeDetail.name}"
            app:layout_constraintBottom_toTopOf="@+id/company_text"
            app:layout_constraintEnd_toEndOf="@+id/company_edit"
            app:layout_constraintStart_toStartOf="@+id/company_text"
            app:layout_constraintTop_toBottomOf="@+id/name_text" />

        <TextView
            android:id="@+id/company_text"
            style="@style/TextViewDetailStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/company"
            app:layout_constraintBottom_toTopOf="@+id/company_edit"
            app:layout_constraintStart_toStartOf="@+id/company_edit"
            app:layout_constraintTop_toBottomOf="@+id/name_edit" />

        <EditText
            android:id="@+id/company_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/company_name"
            android:ems="10"
            android:hint="@string/company_name"
            android:text="@={shoeViewModel.shoeDetail.company}"

            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/size_text"
            app:layout_constraintEnd_toEndOf="@+id/size_edit"
            app:layout_constraintStart_toStartOf="@+id/size_text"
            app:layout_constraintTop_toBottomOf="@+id/company_text" />

        <TextView
            android:id="@+id/size_text"
            style="@style/TextViewDetailStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/size"
            app:layout_constraintBottom_toTopOf="@+id/size_edit"
            app:layout_constraintStart_toStartOf="@+id/size_edit"
            app:layout_constraintTop_toBottomOf="@+id/company_edit" />

        <EditText
            android:id="@+id/size_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/shoe_size"
            android:ems="10"
            android:text="@={Converter.doubleToString(shoeViewModel.shoeDetail.size)}"
            android:hint="@string/shoe_size"
            android:inputType="number"
            app:layout_constraintBottom_toTopOf="@+id/description_text"
            app:layout_constraintEnd_toEndOf="@+id/description_edit"
            app:layout_constraintStart_toStartOf="@+id/description_text"
            app:layout_constraintTop_toBottomOf="@+id/size_text" />

        <TextView
            android:id="@+id/description_text"
            style="@style/TextViewDetailStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            app:layout_constraintBottom_toTopOf="@+id/description_edit"
            app:layout_constraintStart_toStartOf="@+id/description_edit"
            app:layout_constraintTop_toBottomOf="@+id/size_edit" />

        <EditText
            android:id="@+id/description_edit"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/shoe_description"
            android:ems="10"
            android:gravity="top"
            android:hint="@string/shoe_description"
            android:inputType="textMultiLine"
            app:layout_constraintBottom_toTopOf="@+id/cancel_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description_text" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:onClick="@{()-> shoeViewModel.addShoe()}"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/cancel_button" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{()-> shoeViewModel.cancelShoeDetail()}"
            android:text="@string/cancel"
            app:layout_constraintBaseline_toBaselineOf="@+id/save_button"
            app:layout_constraintEnd_toStartOf="@+id/save_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>