<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".screens.login.LoginFragment">

    <data>
        <variable
            name="shoeViewModel"
            type="com.udacity.shoestore.viewmodel.ShoeViewModel" />

    </data>
<!--    if user rotates the phone so all views will be reachable by scroll-->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
<!--        the constraint inside NestedScrollView-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/email_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                style="@style/TextViewDetailStyle"

                app:layout_constraintBottom_toTopOf="@+id/email_edit"
                app:layout_constraintStart_toStartOf="@+id/email_edit"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <EditText
                android:id="@+id/email_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="emailAddress"
                android:ems="10"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                app:layout_constraintBottom_toTopOf="@+id/password_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_text" />

            <TextView
                android:id="@+id/password_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextViewDetailStyle"

                android:layout_marginTop="24dp"
                android:text="@string/password"
                app:layout_constraintBottom_toTopOf="@+id/password_edit"
                app:layout_constraintStart_toStartOf="@+id/email_edit"
                app:layout_constraintTop_toBottomOf="@+id/email_edit" />

            <EditText
                android:id="@+id/password_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="password"
                android:ems="10"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                app:layout_constraintBottom_toTopOf="@+id/login_button"
                app:layout_constraintStart_toStartOf="@+id/password_text"
                app:layout_constraintTop_toBottomOf="@+id/password_text" />


            <Button
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/login"
                android:onClick="@{()-> shoeViewModel.userLogin()}"
                app:layout_constraintBottom_toTopOf="@+id/new_login_button"
                app:layout_constraintEnd_toEndOf="@+id/new_login_button"
                app:layout_constraintStart_toStartOf="@+id/new_login_button"
                app:layout_constraintTop_toBottomOf="@+id/password_edit"
                app:layout_constraintVertical_chainStyle="packed" />

            <Button
                android:id="@+id/new_login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/new_login"
                android:onClick="@{()-> shoeViewModel.userNewLogin()}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_button" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>
</layout>

